# backend/app/Models/Profile.php
@@ -35,6 +35,13 @@ class Profile extends Model
         'email',
         'display_name',
         'avatar_url',
+        'national_id',
+        'first_name',
+        'last_name',
+        'age',
+        'gender',
+        'address',
+        'phone',
         'role',
         'verification_status',
         'metadata',
